Thu Apr 29 20:44:24 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* bearoff.c (GetDistCompressed): fix sanity check for huge 
	databases.

Wed Apr 28 20:28:22 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	Add new utility program bearoffdump for inspection
	of databases.

	* bearoffdump.c: new file.	
	* Makefile.am: add bearoffdump as installable file.

Wed Apr 28 16:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* set.c: Change "set priority idle" to set the process priority to
	idle (for windows).

Mon Apr 26 13:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, credits.*: Moved copyright string to credits.sh

Sun Apr 25 08:46:27 CEST 2004  Dmitri I GOULIAEV  <dmitri.gouliaev@telkel.net>

	* credits.sh: add Dmitri I GOULIAEV
	* NEWS: add russian translation
	
Fri Apr 23 22:12:51 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c: according to FSF we must give individual years
	rather than an interval.
	* gtkboard.c (update_pipcount): show epc in lowercase.
	
	* gnubg.c: fix a typo in the definition for "relational" command.
	* relational.c: add code for most functions.
	* scripts/database.py: adapt code to relational.c

Fri Apr 23 13:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c: Change year to 2004 for command line build

Thu Apr 22 21:09:01 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	Introduce RNG context for storage of RNG-specific private data.

	* dice.c (many functions): add rngctx to a number of functions
	(change all callers)
	* show.c (CommandShowSeed): show RNG counter as well.

Wed Apr 21 22:53:44 CEST 2004  Petr Kadlec  <mormegil@centrum.cz>

	Corrected some i18n-related problems + typos.

	* gnubg.c, gtkgame.c, gtkprefs.c, gtkrace.c, html.c,
	play.c, set.c, show.c, text.c: Added calls to gettext,
	marked some previously unmarked translatable
	strings (and vice versa), corrected a few typos.

Tue Apr 20 17:56:25 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* matchequity.c (initPostCrawfordMETFromParameters):